Added encoding and decoding DPD.

--- a/configure.ac
+++ b/configure.ac
@@ -3,15 +3,17 @@
 
 AC_PREREQ(2.59)
 AC_INIT(dec128, 0.0.1, hnakamur@gmail.com)
-AC_CONFIG_HEADER([config.h])
+AC_CONFIG_AUX_DIR([config])
+AC_CONFIG_HEADER([src/config.h])
 
 AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_LIBTOOL
 
 # Checks for libraries.
-AC_CHECK_LIB(cunit, CU_basic_run_suite)
+AC_CHECK_CUTTER
 
 # Checks for header files.
 AC_HEADER_STDC
@@ -22,5 +24,5 @@ AC_HEADER_STDBOOL
 
 # Checks for library functions.
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
 AC_OUTPUT
