--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,3 @@
-bin_PROGRAMS = test_dec128
-test_dec128_SOURCES = test_dec128.c dec128.c
+ACLOCAL_AMFLAGS = $$ACLOCAL_ARGS
 
-AM_LDFLAGS = -lcunit
-
-test: $(bin_PROGRAMS)
-	./test_dec128
+SUBDIRS = src test
