--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,7 +7,7 @@ INCLUDES = $(CUTTER_CFLAGS) -I$(top_srcdir)/src
 LIBS = $(CUTTER_LIBS) $(top_builddir)/src/libdec128.la
 
 LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
-test_dec128_la_SOURCES = test-dec128.c
+test_dec128_la_SOURCES = test_dec128.c test_decode_DPD.c test_encode_DPD.c
 
 echo-cutter:
 	@echo $(CUTTER)
